<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>


    <string name="action_show_map">Location on Map</string>

    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <string name="weather_condition_image_description">Weather condition image</string>

    <!-- Preferences -->
    <string name="pref_location_label">Location</string>
    <!-- the key for location storing in the shared preferences -->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">109323</string>


    <string name="pref_tempUnit_label">Temperature Unit</string>
    <string name="pref_tempUnit_key" translatable="false">tempUnit</string>
    <string name="pref_tempUnit_metric" translatable="false">metric</string>
    <string name="pref_tempUnit_imperial" translatable="false">imperial</string>

    <string name="pref_show_notification_label">Daily weather notifications</string>
    <string name="pref_show_notification_key" translatable="false">showNotification</string>
    <string name="pref_show_notification_summary_on">On</string>
    <string name="pref_show_notification_summary_off">Off</string>

    <!-- String formatting -->
    <string name="format_temp"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.mosemos.com</string>
    <string name="content_authority">com.mosemos.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>

</resources>
