<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        android:summary="%s"
        />

    <ListPreference
        android:title="@string/pref_tempUnit_label"
        android:key="@string/pref_tempUnit_key"
        android:defaultValue="@string/pref_tempUnit_metric"
        android:entries="@array/tempUnit_entries"
        android:entryValues="@array/tempUnit_entryValues" />


    <SwitchPreference
        android:title="@string/pref_show_notification_label"
        android:key="@string/pref_show_notification_key"
        android:summaryOff="@string/pref_show_notification_summary_off"
        android:summaryOn="@string/pref_show_notification_summary_on"
        android:defaultValue="true"
        />

</PreferenceScreen>